--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -10,14 +10,14 @@ apiVersion: v1
 metadata:
   name: grafana-system
   labels: 
-    istio-injection: disabled
+    istio-injection: enabled
 ---
 kind: Namespace
 apiVersion: v1
 metadata:
   name: prometheus-system
   labels: 
-    istio-injection: disabled
+    istio-injection: enabled
 ---
 kind: Namespace
 apiVersion: v1
@@ -31,14 +31,21 @@ apiVersion: v1
 metadata:
   name: jaeger-system
   labels: 
-    istio-injection: disabled
+    istio-injection: enabled
 ---
 kind: Namespace
 apiVersion: v1
 metadata:
   name: kiali-system
   labels: 
-    istio-injection: disabled
+    istio-injection: enabled
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: elastic-system
+  labels: 
+    istio-injection: enabled
 ---
 kind: Namespace
 apiVersion: v1
