--- a/vote-app/charts/backend/templates/service.yaml
+++ b/vote-app/charts/backend/templates/service.yaml
@@ -11,7 +11,7 @@ spec:
   - name: http-backend
     port: {{ .Values.service.port }}
     protocol: TCP
-    targetPort: {{ .Values.service.port }}
+    targetPort: {{ .Values.container.port }}
   selector:
     app: {{ template "name" . }}
 {{ end }}
