--- a/vote-app/docker-compose.yml
+++ b/vote-app/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '3'
+version: "3.7"
 services:
   front:
-    build: ./charts/frontend/app
+    build: 
+      context: ./charts/frontend/app
+      dockerfile: Dockerfile.elasticapm
     ports:
-    - "8080:80"
+    - "8080:8080"
+    networks:
+      elastic:
+        ipv4_address: 172.28.1.9
     environment:
-    - BACKEND_BASE_URL=http://back:80/api/hits
+    - BACKEND_BASE_URL=http://back:8081/api/hits
     - JAEGER_SERVICE_NAME=frontend
     - JAEGER_AGENT_HOST=jaeger
     - FRONTEND_VERSION=compose
@@ -13,9 +18,11 @@ services:
     - back
     - jaeger
   back:
-    build: ./charts/backend/app
+    build: 
+      context: ./charts/backend/app
+      dockerfile: Dockerfile.dotnet22
     ports:
-    - "8081:80"
+    - "8081:8081"
     environment:
     - JAEGER_SERVICE_NAME=backend
     - JAEGER_SAMPLER_TYPE=const
@@ -42,3 +49,9 @@ services:
     - 9411:9411
     environment:
     - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+networks:
+  elastic:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.0.0/
