--- a/vote-app/charts/frontend/app-elastic/requirements.txt
+++ b/vote-app/charts/frontend/app-elastic/requirements.txt
@@ -1,6 +1,5 @@
 requests
 opentracing_instrumentation
-Flask-Opentracing
 Flask-API
 flask
 gevent
@@ -8,3 +7,4 @@ blinker
 uwsgi 
 elastic-apm[flask] 
 elastic-apm[opentracing]
+structlog
