--- a/vote-app/charts/frontend/values.yaml
+++ b/vote-app/charts/frontend/values.yaml
@@ -25,6 +25,9 @@ service:
   timeout: 3
   version: "v1.0.0"
   port: 80
+apm:
+  server: "http://apmserver-apm-http.elastic-system.svc.cluster.local:8200"
+  token: ""
 autoscale:
   enabled: true
   min: 3
