--- a/vote-app/docker-compose.yml
+++ b/vote-app/docker-compose.yml
@@ -2,56 +2,49 @@ version: "3.7"
 services:
   front:
     build: 
-      context: ./charts/frontend/app
-      dockerfile: Dockerfile.elasticapm
+      context: ./charts/frontend/app-elastic
+      dockerfile: Dockerfile
     ports:
     - "8080:8080"
-    networks:
-      elastic:
-        ipv4_address: 172.28.1.9
     environment:
     - BACKEND_BASE_URL=http://back:8081/api/hits
     - JAEGER_SERVICE_NAME=frontend
     - JAEGER_AGENT_HOST=jaeger
     - FRONTEND_VERSION=compose
-    depends_on:
-    - back
-    - jaeger
-  back:
-    build: 
-      context: ./charts/backend/app
-      dockerfile: Dockerfile.dotnet22
-    ports:
-    - "8081:8081"
-    environment:
-    - JAEGER_SERVICE_NAME=backend
-    - JAEGER_SAMPLER_TYPE=const
-    - JAEGER_SAMPLER_PARAM=1
-    - JAEGER_SREPORTER_LOG_SPANS=true
-    - JAEGER_PROPAGATION=B3
-    - JAEGER_AGENT_HOST=jaeger
-    - ASPNETCORE_REDIS=redis:6379
-    - ASPNETCORE_BACKEND_VERSION=compose
-    depends_on:
-    - redis
-    - jaeger
-  redis:
-    image: redis:5.0.5-buster
-  jaeger:
-    image: jaegertracing/all-in-one:1.16
-    ports:
-    - 5775:5775/udp
-    - 6831:6831/udp
-    - 6832:6832/udp
-    - 5778:5778
-    - 16686:16686
-    - 14268:14268
-    - 9411:9411
-    environment:
-    - COLLECTOR_ZIPKIN_HTTP_PORT=9411
-networks:
-  elastic:
-    ipam:
-      driver: default
-      config:
-        - subnet: 10.0.0.0/
+    # - ELASTIC_APM_USE_STRUCTLOG=true
+    - ELASTIC_APM_DEBUG=true
+  #   depends_on:
+  #   - back
+  #   # - jaeger
+  # back:
+  #   build: 
+  #     context: ./charts/backend/app-elastic
+  #     dockerfile: Dockerfile
+  #   ports:
+  #   - "8081:8081"
+  #   environment:
+  #   - JAEGER_SERVICE_NAME=backend
+  #   - JAEGER_SAMPLER_TYPE=const
+  #   - JAEGER_SAMPLER_PARAM=1
+  #   - JAEGER_SREPORTER_LOG_SPANS=true
+  #   - JAEGER_PROPAGATION=B3
+  #   - JAEGER_AGENT_HOST=jaeger
+  #   - ASPNETCORE_REDIS=redis:6379
+  #   - ASPNETCORE_BACKEND_VERSION=compose
+  #   depends_on:
+  #   - redis
+    # - jaeger
+  # redis:
+  #   image: redis:5.0.5-buster
+  # jaeger:
+  #   image: jaegertracing/all-in-one:1.16
+  #   ports:
+  #   - 5775:5775/udp
+  #   - 6831:6831/udp
+  #   - 6832:6832/udp
+  #   - 5778:5778
+  #   - 16686:16686
+  #   - 14268:14268
+  #   - 9411:9411
+  #   environment:
+  #   - COLLECTOR_ZIPKIN_HTTP_PORT=9411
