fix front logging

--- a/vote-app/charts/frontend/app-django-elastic/requirements.txt
+++ b/vote-app/charts/frontend/app-django-elastic/requirements.txt
@@ -2,6 +2,7 @@ django
 django-structlog
 opentracing_instrumentation
 uwsgi 
-elastic-apm[flask] 
+elastic-apm
 elastic-apm[opentracing]
 structlog
+requests
